--- a/juitsa-theme.css
+++ b/juitsa-theme.css
@@ -38,6 +38,7 @@ h1.title {
 }
 
 div.container-fluid {
+    padding-top:10px;
     padding-right: 0px;
     padding-left: 0px;
     margin-right: auto;
