--- a/juitsa-theme.css
+++ b/juitsa-theme.css
@@ -37,7 +37,7 @@ h1.title {
   text-align: center;
 }
 
-div.container-fluid {
+/* div.container-fluid {
     padding-top:10px;
     padding-right: 0px;
     padding-left: 0px;
