--- a/app/www/css/custom-a.css
+++ b/app/www/css/custom-a.css
@@ -3,8 +3,12 @@
 body{
   text-align: justify;
   font-family: "Lato";
+  font-size: 15;
 }
 
+p{
+  font-size:20px;
+}
 
 .navbar{background-color: #763d7a !important; /* Esto es para la barra morada horizontal del top  */
         
