--- a/app/www/css/docs-theme.css
+++ b/app/www/css/docs-theme.css
@@ -1,6 +1,20 @@
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700&display=swap'); 
+
 body{
-  text-align: justify;
+  text-align: justify;  
+  font-family: "Lato";
+  font-size: 25;
 }
+
+
+p {
+  font-size: 25px;
+  margin-right: 20px;
+  margin-left: 20px;
+  max-width: 1500px;
+ }
+
+
 
 h1 {
   margin-top: 100px;
@@ -19,14 +33,6 @@ h2 {
   margin-right: 100px;
   margin-left: 20px;
 }
-
-
-p {
-  font-size: 20px;
-  margin-right: 20px;
-  margin-left: 20px;
-  max-width: 1500px;
- }
 
 
 h1.title {
